--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/car_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Авто на продажу из Казахстана</title>
+    <script>
+      window.bgdataLayer = window.bgdataLayer || [];
+      function bge(){bgdataLayer.push(arguments);}
+      bge('init', "1444311046949498");
+             bge('event', 'page_view');
+     
+     </script>
+     <script async src="https://api.imotech.video/ad/events.js?pixel_id=904158290094070272"></script>
   </head>
   <body>
     <div id="root"></div>
