new script head

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
       fbq('init', '1444311046949498');
       fbq('track', 'PageView');
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17006162208"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'AW-17006162208');
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16574229501"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'AW-16574229501');
+    </script>
     <!-- End Meta Pixel Code -->
   </head>
   <body>
